src/test/deca/context/valid/expression/minus_beaucoup.deca
// Description:
//    Beaucoup de moins
//
// Resultats:
//    Ca marche
//
// Historique:
//    cree le 08/01/2022

{
    int x = ---------------------------------1;
}
