src/test/deca/context/invalid/variables/assign_incompatible.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
// 
// Historique:
//    cree le 01/01/2022

{
    float a = 2.0 ;
    int b = 1 ;
    b = a ;
}
